# stratix

./: .env  .gitignore  docker-compose.yml  docker-compose_dev.yml
backend/: .env  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06f3a8d1567e_add_is_admin_nullable.py  49b4741dac9d_initial_migration.py
backend/logs/: app.json  fastapi.json
backend/src/: main.py
backend/src/auth/: exceptions.py
backend/src/auth/api/: dependencies.py  rest.py
backend/src/auth/application/interfaces/: auth_provider.py  auth_uow.py
backend/src/auth/application/use_cases/: change_password.py  change_username.py  login.py  parse_token.py  register.py
backend/src/auth/domain/: dtos.py  entities.py
backend/src/auth/infrastructure/: fake_auth_provider.py  jwt_auth_provider.py  password_helper.py
backend/src/auth/infrastructure/db/: unit_of_work.py
backend/src/core/: config.py  logging_setup.py
backend/src/core/account/: __init__.py  entities.py  interfaces.py  orm.py  repository.py
backend/src/core/auth/: entities.py
backend/src/core/http/: api_client.py  exceptions.py
backend/src/db/: dependencies.py  engine.py
backend/src/mining/api/: dependencies.py  rest.py
backend/src/mining/application/interfaces/: mining_client.py
backend/src/mining/application/use_cases/: chart_hashrate.py  contact_support.py  create_proxy.py  proxies_list.py  stats_hashrate.py  update_proxy.py  update_status_proxy.py  worker_history.py  workers_history_all.py  workers_list.py
backend/src/mining/domain/: dtos.py  enum.py
certbot/: Dockerfile
(+89 files in other folders)
